Kubernetes/deployment_szurubooru.yml
# Image Board engine with tagging and everything
# I use it to store weeb-stuff and "offbrand", but it can totally do also normal images
apiVersion: apps/v1
kind: Deployment
metadata:
  name: szurubooru-server
  namespace: default
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: szurubooru-server
  template:
    metadata:
      labels:
        app: szurubooru-server
    spec:
      containers:
      - env:
        # Unfortunatly there is a bug in szurubooru where when running it in kubernetes results in it thinking it is running as a desktop app instead of docker
        # resulting in it not loading the enviroment variables. We have to set them via the config file
        #
        # - name: POSTGRES_HOST
        #   value: "szurubooru-postgres.default.svc.cluster.local"
        # - name: POSTGRES_USER
        #   valueFrom:
        #     configMapKeyRef:
        #       name: szurubooru
        #       key: POSTGRES_USER
        # - name: POSTGRES_PASSWORD
        #   valueFrom:
        #     configMapKeyRef:
        #       name: szurubooru
        #       key: POSTGRES_PASSWORD
        image: szurubooru/server:latest
        imagePullPolicy: Always
        name: szurubooru-server
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
        volumeMounts:
        - mountPath: /data
          name: data
        - mountPath: /opt/app/config.yaml
          name: config
          subPath: config.yaml
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      securityContext: {}
      terminationGracePeriodSeconds: 30
      volumes:
      - name: data
        persistentVolumeClaim:
          claimName: szurubooru
      - name: config
        configMap:
          name: szurubooru
          items:
          - key: CONFIG_FILE
            path: "config.yaml"

---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: szurubooru-client
  namespace: default
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: szurubooru-client
  template:
    metadata:
      labels:
        app: szurubooru-client
    spec:
      containers:
      - env:
        - name: BACKEND_HOST
          value: "szurubooru-server.default.svc.cluster.local"
        image: szurubooru/client:latest
        imagePullPolicy: Always
        name: szurubooru-client
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
        volumeMounts:
        - mountPath: /data
          name: data
          readOnly: true
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      securityContext: {}
      terminationGracePeriodSeconds: 30
      volumes:
      - name: data
        persistentVolumeClaim:
          claimName: szurubooru

---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: szurubooru-postgres
  namespace: default
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: szurubooru-postgres
  template:
    metadata:
      labels:
        app: szurubooru-postgres
    spec:
      containers:
      - env:
        - name: POSTGRES_USER
          valueFrom:
            configMapKeyRef:
              name: szurubooru
              key: POSTGRES_USER
        - name: POSTGRES_PASSWORD
          valueFrom:
            configMapKeyRef:
              name: szurubooru
              key: POSTGRES_PASSWORD
        - name: PGDATA 
          value: /var/lib/postgresql/data/pgdb # it can not be the same directory as the mount, it has to be a sub, otherwise it fails
        image: postgres:11-alpine
        imagePullPolicy: Always
        name: szurubooru-postgres
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
        volumeMounts:
        - mountPath: /var/lib/postgresql/data
          name: db
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      securityContext: {}
      terminationGracePeriodSeconds: 30
      volumes:
      - name: db
        persistentVolumeClaim:
          claimName: szurubooru-db

---

apiVersion: v1
kind: Service
metadata:
  name: szurubooru-server
  namespace: default
spec:
  internalTrafficPolicy: Cluster
  ipFamilies:
  - IPv4
  ipFamilyPolicy: SingleStack
  ports:
  - name: api
    port: 6666
    protocol: TCP
    targetPort: 6666
  selector:
    app: szurubooru-server
  sessionAffinity: None
  type: ClusterIP

---

apiVersion: v1
kind: Service
metadata:
  name: szurubooru-client
  namespace: default
spec:
  internalTrafficPolicy: Cluster
  ipFamilies:
  - IPv4
  ipFamilyPolicy: SingleStack
  ports:
  - name: web
    port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app: szurubooru-client
  sessionAffinity: None
  type: ClusterIP

---

apiVersion: v1
kind: Service
metadata:
  name: szurubooru-postgres
  namespace: default
spec:
  internalTrafficPolicy: Cluster
  ipFamilies:
  - IPv4
  ipFamilyPolicy: SingleStack
  ports:
  - name: postgres
    port: 5432
    protocol: TCP
    targetPort: 5432
  selector:
    app: szurubooru-postgres
  sessionAffinity: None
  type: ClusterIP

---

apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: szurubooru
  namespace: default
spec:
  entryPoints:
    - websecure
  routes:
  # you need to make a dns entry in your pihole to point to your server (the vip on which traefik is load balanced to). Just typing the IP into your browser won't work
  - match: Host(`szuru.local.[insert dns]`)
    kind: Rule
    services:
    - name: szurubooru-client
      port: 80
